--- a/2-guia/ejercicios-2/ej-1-2.tex
+++ b/2-guia/ejercicios-2/ej-1-2.tex
@@ -1,2 +1,33 @@
 \ejercicio
-\hacer
+\begin{enumerate}[label=\roman*)]
+    \item Reescribir cada una de las siguientes sumas usando el símbolo de sumatoria\\ 
+    
+    ¿Como resolver este ejercicio?\\
+    Lo que queremos hacer es compactar la suma para evitar evitar el uso\\
+    de suspensivos, la notacion ideal para esos casos es el simbolo de sumatoria.\\
+    El primer paso es fijarse en el comportamiento de cada termino de\\
+    nuesta suma. Por ejemplo, en el punto (b) notamos que cada termino comienza a\\
+    duplicarse.
+
+
+    \begin{enumerate}[label=\alph*)] 
+        \item  1 + 2 + 3 + 4 + · · · + 100\\
+        Respuesta: $ \sumatoria{i=1}{100}i $\\
+
+        \item  1 + 2 + 4 + 8 + 16 + · · · + 1024\\
+        Respuesta: $ \sumatoria{i=0}{10}2^i $\\
+
+        \item  1 + (-4) + 9 + (-16) + 25 + · · · + (-144)\\
+        Respuesta: $ \sumatoria{i=1}{12}i^2(-1)^{n+1} $\\
+
+        \item 1 + 9 + 25 + 49 + · · · + 441\\
+        Respuesta: $ \sumatoria{i=0}{10}(1+2i)^2 $\\
+
+        \item 1 + 3 + 5 + · · · + (2n + 1)\\
+        Respuesta: $ \sumatoria{i=0}{n} 2i+1 $\\
+
+        \item n + 2n + 3n + · · · + n^2\\
+        Respuesta: $ \sumatoria{i=1}{n} in $\\
+    \end{enumerate}
+\end{enumerate}
+
