--- a/2-guia/ejercicios-2/ej-1-2.tex
+++ b/2-guia/ejercicios-2/ej-1-2.tex
@@ -2,31 +2,31 @@
 \begin{enumerate}[label=\roman*)]
     \item Reescribir cada una de las siguientes sumas usando el símbolo de sumatoria\\ 
     
-    ¿Como resolver este ejercicio?\\
-    Lo que queremos hacer es compactar la suma para evitar evitar el uso\\
-    de suspensivos, la notacion ideal para esos casos es el simbolo de sumatoria.\\
-    El primer paso es fijarse en el comportamiento de cada termino de\\
-    nuesta suma. Por ejemplo, en el punto (b) notamos que cada termino comienza a\\
+    ¿Cómo resolver este ejercicio?\\
+    Lo que queremos hacer es compactar la suma para evitar el uso\\
+    de puntos suspensivos, la notación ideal para esos casos es el símbolo de sumatoria.\\
+    El primer paso es fijarse en el comportamiento de cada término de\\
+    nuesta suma. Por ejemplo, en el punto \ref{referenciaAlItem:1-2} notamos que cada término comienza a\\
     duplicarse.
 
 
     \begin{enumerate}[label=\alph*)] 
-        \item  1 + 2 + 3 + 4 + · · · + 100\\
+        \item  $1 + 2 + 3 + 4 + \dots + 100$\\
         Respuesta: $ \sumatoria{i=1}{100}i $\\
 
-        \item  1 + 2 + 4 + 8 + 16 + · · · + 1024\\
+        \item\label{referenciaAlItem:1-2}  $1 + 2 + 4 + 8 + 16 + \dots + 1024$\\
         Respuesta: $ \sumatoria{i=0}{10}2^i $\\
 
-        \item  1 + (-4) + 9 + (-16) + 25 + · · · + (-144)\\
+      \item  $1 + (-4) + 9 + (-16) + 25 + \dots + (-144)$\\
         Respuesta: $ \sumatoria{i=1}{12}i^2(-1)^{n+1} $\\
 
-        \item 1 + 9 + 25 + 49 + · · · + 441\\
+        \item $1 + 9 + 25 + 49 + \dosts + 441$\\
         Respuesta: $ \sumatoria{i=0}{10}(1+2i)^2 $\\
 
-        \item 1 + 3 + 5 + · · · + (2n + 1)\\
+        \item $1 + 3 + 5 + \dots + (2n + 1)$\\
         Respuesta: $ \sumatoria{i=0}{n} 2i+1 $\\
 
-        \item n + 2n + 3n + · · · + n^2\\
+        \item $n + 2n + 3n + \dots + n^2$\\
         Respuesta: $ \sumatoria{i=1}{n} in $\\
     \end{enumerate}
 \end{enumerate}
