--- a/2-guia/ejercicios-2/ej-1-2.tex
+++ b/2-guia/ejercicios-2/ej-1-2.tex
@@ -20,7 +20,8 @@
       \item  $1 + (-4) + 9 + (-16) + 25 + \dots + (-144)$\\
         Respuesta: $ \sumatoria{i=1}{12}i^2(-1)^{n+1} $\\
 
-        \item $1 + 9 + 25 + 49 + \dosts + 441$\\
+        \item $1 + 9 + 25 + 49 + \dots + 441$\\
+
         Respuesta: $ \sumatoria{i=0}{10}(1+2i)^2 $\\
 
         \item $1 + 3 + 5 + \dots + (2n + 1)$\\
