--- a/2-guia/ejercicios-2/ej-18-2.tex
+++ b/2-guia/ejercicios-2/ej-18-2.tex
@@ -1,1 +1,247 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+    Hallar una fórmula para el término general de las sucesiones definidas recursivamente a continuación
+    y probar su validez.
+    \begin{enumerate}[label=\roman*)]
+        \item $a_1 = 1,\ a_2 = 2 \text{ y } a_{n+2} = n a_{n+1} + 2(n+1)a_n,\ \forall n \in \mathbb{N}$
+        \item $a_1 = 1,\ a_2 = 4 \text{ y } a_{n+2} = 4 \sqrt{a_{n+1}} + a_n,\ \forall n \in \mathbb{N}$
+        \item $a_1 = 1,\ a_2 = 3 \text{ y } 2 a_{n+2} = a_{n+1} + a_n + 3n + 5,\ \forall n \in \mathbb{N}$ 
+        \item $a_1 = -3,\ a_2 = 6 \text{ y } 
+        a_{n+2} = 
+        \begin{cases}
+            -a_{n+1} - 3, &\text{si $n$ es impar} \\
+            a_{n+1} + 2 a_n + 9, &\text{si $n$ es par}
+        \end{cases}
+        \  (n \in \mathbb{N})$
+    \end{enumerate}
+\end{enunciado}
+\begin{enumerate}[label=\roman*)]
+    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \setcounter{equation}{0}
+    \begin{align}
+        a_1 &= 1 \\
+        a_2 &= 2 \\
+        a_{n+2} &= n a_{n+1} + 2(n+1)a_n,\ \forall n \in \mathbb{N}
+    \end{align}
+    Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una formula para su termino 
+    n-ésimo
+    \begin{align}
+        a_3 &= 1 \cdot a_2 + 2(1 + 1)a_1 = 1 \cdot 2 + 2(1 + 1)1 = 6 = 3! \nonumber \\
+        a_4 &= 2 a_3 + 2(2 + 1)a_2 = 2 \cdot 6 + 2(2 + 1)2 = 24 = 4! \nonumber \\
+        a_5 &= 3 a_4 + 2(3 + 1)a_3 = 3 \cdot 24 + 2(3 + 1)6 = 120 = 5! \nonumber \\
+        &\vdotswithin{=} \nonumber \\
+        a_n &= n!
+    \end{align}
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(4). 
+    Hagamoslo por inducción
+    \begin{align*}
+        P(n): a_n = n!, \ n \in \mathbb{N}   
+    \end{align*}
+    \underline{Caso Base}, $n = 1$ y $n = 2$:
+	\begin{align*}
+		&P(1): a_1 = 1! = 1 \overset{(1)}{=} 1 \implies P(1):V \\
+        &P(2): a_2 = 2! = 2 \overset{(2)}{=} 2 \implies P(2):V \\
+	\end{align*}
+	\underline{Paso inductivo}. Sea $n \in \mathbb{N}$:
+	\begin{enumerate}
+        \item[HI.] $P(n):V \text{ y } P(n+1):V$, donde $P(n+1): a_{n+1} = (n+1)!$
+        \item[TI.] $P(n+2): a_{n+2} = (n+2)!$
+    \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la igualdad en la TI
+    \begin{align*}
+  	    a_{n+2} \overset{(3)}&{=} n a_{n+1} + 2(n+1)a_n \overset{\text{HI}}{=} n(n+1)! + 2(n+1)n! = n(n+1)! + 2(n+1)! \\
+        a_{n+2} &= (n+1)!(n+2) = (n+2)!
+        \implies P(n+2):V
+    \end{align*}
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+
+    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \setcounter{equation}{0}
+    \begin{align}
+        a_1 &= 1 \\
+        a_2 &= 4 \\
+        a_{n+2} &= 4 \sqrt{a_{n+1}} + a_n,\ \forall n \in \mathbb{N}
+    \end{align}
+    Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una formula para su termino 
+    n-ésimo
+    \begin{align}
+        a_3 &= 4 \sqrt{a_2} + a_1 = 4 \sqrt{4} + 1 = 9 = 3^2 \nonumber \\
+        a_4 &= 4 \sqrt{a_3} + a_2 = 4 \sqrt{9} + 4 = 16 = 4^2 \nonumber \\
+        a_5 &= 4 \sqrt{a_4} + a_3 = 4 \sqrt{16} + 9 = 25 = 5^2 \nonumber \\
+        &\vdotswithin{=} \nonumber \\
+        a_n &= n^2
+    \end{align}
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(4). 
+    Hagamoslo por inducción
+    \begin{align*}
+        P(n): a_n = n^2, \ n \in \mathbb{N}   
+    \end{align*}
+    \underline{Caso Base}, $n = 1$ y $n = 2$:
+	\begin{align*}
+		&P(1): a_1 = 1^2 = 1 \overset{(1)}{=} 1 \implies P(1):V \\
+        &P(2): a_2 = 2^2 = 4 \overset{(2)}{=} 4 \implies P(2):V \\
+	\end{align*}
+	\underline{Paso inductivo}. Sea $n \in \mathbb{N}$:
+	\begin{enumerate}
+        \item[HI.] $P(n):V \text{ y } P(n+1):V$, donde $P(n+1): a_{n+1} = (n+1)^2$
+        \item[TI.] $P(n+2): a_{n+2} = (n+2)^2$
+    \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la igualdad en la TI
+    \begin{align*}
+  	    a_{n+2} \overset{(3)}&{=} 4 \sqrt{a_{n+1}} + a_n \overset{\text{HI}}{=} 4 \sqrt{(n+1)^2} + n^2  
+        = 4(n+1) + n^2 = n^2 + 4n + 4 = (n+2)^2 \\
+        a_{n+2} &= (n+2)^2 \implies P(n+2):V
+    \end{align*}
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+
+    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \setcounter{equation}{0}
+    \begin{align}
+        a_1 &= 1 \\
+        a_2 &= 3 \\
+        2a_{n+2} &= a_{n+1} + a_n + 3n + 5,\ \forall n \in \mathbb{N} \implies 
+        a_{n+2} = \frac{a_{n+1} + a_n + 3n + 5}{2},\ \forall n \in \mathbb{N}
+    \end{align}
+    Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una formula para su termino 
+    n-ésimo
+    \begin{align}
+        a_3 &= \frac{a_{2} + a_1 + 3 \cdot 1 + 5}{2} = \frac{3 + 1 + 3 + 5}{2}  = 6 = 3 + 2 + 1 \nonumber \\
+        a_4 &= \frac{a_{3} + a_2 + 3 \cdot 2 + 5}{2} = \frac{6 + 3 + 6 + 5}{2}  = 10 = 4 + 3 + 2 + 1 \nonumber \\
+        a_5 &= \frac{a_{4} + a_3 + 3 \cdot 3 + 5}{2} = \frac{10 + 6 + 9 + 5}{2}  = 15 = 5 + 4 + 3 + 2 + 1 \nonumber \\
+        &\vdotswithin{=} \nonumber \\
+        a_n &= \sum_{i=1}^{n} i \implies a_n = \frac{n(n+1)}{2}
+    \end{align}
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(4). 
+    Hagamoslo por inducción
+    \begin{align*}
+        P(n): a_n = \frac{n(n+1)}{2}, \ n \in \mathbb{N}   
+    \end{align*}
+    \underline{Caso Base}, $n = 1$ y $n = 2$:
+	\begin{align*}
+		&P(1): a_1 = \frac{1(1+1)}{2} = 1 \overset{(1)}{=} 1 \implies P(1):V \\
+        &P(2): a_2 = \frac{2(2+1)}{2} = 3 \overset{(2)}{=} 3 \implies P(2):V \\
+	\end{align*}
+	\underline{Paso inductivo}. Sea $n \in \mathbb{N}$:
+	\begin{enumerate}
+        \item[HI.] $P(n):V \text{ y } P(n+1):V$, donde $P(n+1): a_{n+1} = \displaystyle \frac{(n+1)(n+2)}{2}$
+        \item[TI.] $P(n+2): a_{n+2} = \displaystyle \frac{(n+2)(n+3)}{2}$
+    \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la igualdad en la TI
+    \begin{align*}
+  	    a_{n+2} \overset{(3)}&{=} \frac{a_{n+1} + a_n + 3n + 5}{2} = \frac{1}{2}(a_{n+1} + a_n + 3n + 5) 
+        \overset{\text{HI}}{=} \frac{1}{2} \left( \frac{(n+1)(n+2)}{2} + \frac{n(n+1)}{2} + 3n + 5 \right) \\
+        a_{n+2} &= \frac{1}{2} \left( \frac{(n+1)(n+2) + n(n+1) + 6n + 10}{2}\right) = 
+        \frac{1}{2} \left( \frac{n^2 + 3n + 2 + n^2 + n + 6n + 10}{2}\right) \\
+        a_{n+2} &= \frac{1}{2} \left( \frac{2n^2 + 10n + 12}{2}\right) = 
+        \frac{1}{2} \left( \frac{2(n+2)(n+3)}{2}\right) = \frac{(n+2)(n+3)}{2} \\
+        a_{n+2} &= \frac{(n+2)(n+3)}{2} \implies P(n+2):V
+    \end{align*}
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+
+    \item Sea $(a_n)_{n \in \mathbb{N}}$ definida por
+    \setcounter{equation}{0}
+    \newsavebox{\mycases}
+    \begin{align}
+        a_1 = -3 \hphantom{\hspace{54.6mm}} \\
+        a_2 = 6 \hphantom{\hspace{57.8mm}} \\
+        \sbox{\mycases}{$\displaystyle a_{n+2} = 
+        \left\{\begin{array}{@{}c@{}}
+                    \hphantom{} \\
+                    \hphantom{}
+                \end{array}
+        \right.\kern-\nulldelimiterspace$}
+        \raisebox{-.5\ht\mycases}[0pt][0pt]{\usebox{\mycases}}
+            -a_{n+1} - 3, \hphantom{\hspace{7mm}} \quad \text{si $n$ es impar} \label{positive} \\
+            a_{n+1} + 2 a_n + 9, \quad \text{si $n$ es par \hphantom{\hspace{3.1mm}}} \label{negative}
+    \end{align}
+    Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una formula para su termino 
+    n-ésimo
+    \begin{align}
+        a_3 &= -a_2 - 3 = -6 - 3  = -9 = (-1) \cdot 3 \cdot 3 \nonumber \\
+        a_4 &= a_3 + 2a_2 + 9 = -9 + 2 \cdot 6 + 9  = 12 = (-1)^2 \cdot 3 \cdot 4 \nonumber \\
+        a_5 &= -a_4 - 3 = -12 - 3  = -15 = (-1) \cdot 3 \cdot 5  \nonumber \\
+        a_6 &= a_5 + 2a_4 + 9 = -15 + 2 \cdot 12 + 9  = 18 = (-1)^2 \cdot 3 \cdot 6 \nonumber \\
+        &\vdotswithin{=} \nonumber \\
+        a_n &= (-1)^n 3n
+    \end{align}
+    Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(5). 
+    Hagamoslo por inducción
+    \begin{align*}
+        P(n): a_n = (-1)^n 3n, \ n \in \mathbb{N}   
+    \end{align*}
+    \underline{Caso Base}, $n = 1$ y $n = 2$:
+	\begin{align*}
+		&P(1): a_1 = (-1)^1 \cdot 3\cdot 1 = -3 \overset{(1)}{=} 1 \implies P(1):V \\
+        &P(2): a_2 = (-1)^2 \cdot 3\cdot 2 = 6 \overset{(2)}{=} 6 \implies P(2):V \\
+	\end{align*}
+	\underline{Paso inductivo}. Sea $n \in \mathbb{N}$:
+	\begin{enumerate}
+        \item[HI.] $P(n):V \text{ y } P(n+1):V$, donde $P(n+1): a_{n+1} = (-1)^{n+1}3(n+1)$
+        \item[TI.] $P(n+2): a_{n+2} = (-1)^{n+2}3(n+2)$
+    \end{enumerate}
+ 	Desarrollemos el lado izquierdo de la igualdad en la TI. Como este depende de la paridad de $n$ tendremos que 
+    analizar dos casos, uno con $n$ impar y otro con $n$ par. \\
+    Caso $n$ impar:
+    \begin{align*}
+  	    a_{n+2} \overset{(3)}&{=} -a_{n+1} - 3 \overset{\text{HI}}{=} -(-1)^{n+1}3(n+1) - 3 
+        \overset{\text{Aux.1}}{=} (-1)^{n+2}3(n+1) - 3 
+        \overset{\text{Aux.2}}{=} -3(n+1) - 3 \\
+        a_{n+2} &= -3n - 3 - 3 = -3n -6 = -3(n+2) = (-1)3(n+2) \overset{\text{Aux.2}}{=} (-1)^{n+2}3(n+2) \\
+        a_{n+2} &= (-1)^{n+2}3(n+2) \implies P(n+2):V,\ n \text{ impar}
+    \end{align*}
+    Caso $n$ par:
+    \begin{align*}
+        a_{n+2} \overset{(4)}&{=} a_{n+1} + 2 a_n + 9 \overset{\text{HI}}{=} (-1)^{n+1}3(n+1) + 2(-1)^n 3n + 9
+        \overset{\text{Aux.4}}{=} -3(n+1) + 2 \cdot 3n + 9  \\
+        a_{n+2} &= -3n - 3 + 6n + 9 = 3n + 6 = 3(n+2) = 1 \cdot 3(n+2)\overset{\text{Aux.5}}{=} (-1)^{n+2}3(n+2) \\
+        a_{n+2} &= (-1)^{n+2}3(n+2) \implies P(n+2):V,\ n \text{ par}
+    \end{align*}
+    Por lo tanto, $P(n+2):V$ para cualquier $n$ natural.
+    Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\forall n \in \mathbb{N}$.
+
+    \paragraph{Auxiliar}{
+        Sabemos que 
+        \begin{align*}
+            (-1)^n =
+            \begin{cases}
+               \hphantom{-}1, \text{ si $n$ es par} \\
+               -1, \text{ si $n$ es impar} 
+            \end{cases}
+        \end{align*}
+    }
+    
+    \paragraph{Auxiliar 2}{
+        Tenemos $n$ impar
+        \begin{align*}
+            -(-1)^{n+1} = (-1)^1 \cdot (-1)^{n+1} = (-1)^{n+2}
+        \end{align*}
+    }
+
+    \paragraph{Auxiliar 2}{
+        Tenemos $n$ impar
+        \begin{align*}
+            (-1)^{n+2} = (-1)^n \cdot (-1)^2 = (-1)^n \cdot 1 \overset{\text{Aux}}{=} -1
+        \end{align*}
+    }
+    
+    \paragraph{Auxiliar 3}{
+        Tenemos $n$ impar
+        \begin{align*}
+            -1 = (-1) \cdot (-1)^2 \overset{\text{Aux}}{=} (-1)^n \cdot (-1)^2 = (-1)^{n+2}
+        \end{align*}
+    }
+
+    \paragraph{Auxiliar 4}{
+        Tenemos $n$ par
+        \begin{itemize}
+            \item $(-1)^{n+1} = (-1)^n \cdot (-1)^1 \overset{\text{Aux}}{=} 1 \cdot (-1) = -1$
+            \item $(-1)^n \overset{\text{Aux}}{=} 1$
+        \end{itemize}
+    }
+
+    \paragraph{Auxiliar 3}{
+        Tenemos $n$ par
+        \begin{align*}
+            1 = 1 \cdot (-1)^2 \overset{\text{Aux}}{=} (-1)^n \cdot (-1)^2 = (-1)^{n+2}
+        \end{align*}
+    }
+\end{enumerate}
